fixed weeeeeird jumping nav

--- a/src/templates/joomlade/assets/less/joomlade/imports/navigation.less
+++ b/src/templates/joomlade/assets/less/joomlade/imports/navigation.less
@@ -126,7 +126,7 @@ body.shownav #mainnav {
     overflow: visible;
     z-index: 10;
     clip: auto;
-    position: absolute;
+    position: absolute !important;
 
     a {
       color: white;
