--- a/src/templates/joomlade/css/joomlade.css
+++ b/src/templates/joomlade/css/joomlade.css
@@ -8904,7 +8904,7 @@ body.shownav #mainnav ul.menu ul.nav-child li a {
     overflow: visible;
     z-index: 10;
     clip: auto;
-    position: absolute;
+    position: absolute !important;
     /** mainlevel **/
     /*** submenu level 1 ***/
     /*** all other levels ***/
